    in the area that is currently visible or cached.
  * A Kabyle Translation for users of wxWidgets >= 3.0.1
  * Holding the "evaluate" key now evaluates all cells of the document one-by-one
  * Even if we scrolled away from evaluation we want to scroll back if an error
    occurs so the user can see that this has happened.
  * Smarter decisions on when to recalculate all cell's sizes.
  * Many additional bug fixes and performance improvements.

16.04:
  * A TeX-like subscript notation: A_1 is now by default shown as an A with
    an 1 as subscript
  * High-quality icons for high-dpi screens.
  * Some broken .wxmx files generated with wxMaxima 13.04 and older will now
    automatically be repaired
  * Tried to make communication with maxima more stable
  * Debug: A monitor for the xml communication between maxima and wxMaxima
  * Leading White-space in front of a character that has to be escaped in
    XML is no more ignored.
  * jpeg-encoded images are now no more converted to much larger png files
    on saving .wxmx files and on exporting.
  * Images will now actually be converted to the target format.
  * Bumped the minor version of the .wxmx format: Some old versions of
    wxmaxima will replace .jpg files embedded in .wxmx files by a
    placeholder on load
  * Increased both speed and memory-efficiency of image handling
  * Save the zoom factor at exit and reload it on opening a new file
  * An option that makes wxMaxima use user-defined labels instead of %o where an
    user-defined label exists. Works well together with unchecking the
    "export code cells" config item.
  * A separate text style for user-defined labels.
  * The "evaluate all cells" and "evaluate till here" now start with a fresh
    instance of maxima
  * TeX export now should work with most unicode chars we have ESC sequences
    for.
  * An auto-repair functionality that repairs most .wxmx files wxMaxima 13.04
    was not able to open again.