@@ -18,6 +18,9 @@ Current:
   * Even if we scrolled away from evaluation we want to scroll back if an error
     occurs so the user can see that this has happened.
   * Smarter decisions on when to recalculate all cell's sizes.
+  * .wxm files now include image cells
+  * Not a change in wxMaxima, but useful: In maxima >5.38 the load() command can
+    load .wxm files like it would load .mac files.
   * Many additional bug fixes and performance improvements.
 
 16.04:
